
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int u_long ;
struct in_addr {int dummy; } ;
struct hostent {scalar_t__ h_addr; } ;


 scalar_t__ ISIP (char*) ;
 int exit (int) ;
 struct hostent* gethostbyname (char*) ;
 int inet_addr (char*) ;
 int inet_ntoa (struct in_addr) ;
 int perror (char*) ;

u_long get_ip(char *hostname)
{
 struct hostent *hp;

 if (ISIP(hostname)) return inet_addr(hostname);

  if ((hp = gethostbyname(hostname))==((void*)0))
  { perror ("[+] gethostbyname() failed check the existance of the host.\n");
    exit(-1); }

  return (inet_ntoa(*((struct in_addr *)hp->h_addr)));
}
