; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/remote/extr_156.c_get_ip.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/remote/extr_156.c_get_ip.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hostent = type { i64 }
%struct.in_addr = type { i32 }

@.str = private unnamed_addr constant [61 x i8] c"[+] gethostbyname() failed check the existance of the host.\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @get_ip(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca %struct.hostent*, align 8
  store i8* %0, i8** %3, align 8
  %5 = load i8*, i8** %3, align 8
  %6 = call i64 @ISIP(i8* %5)
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %11

8:                                                ; preds = %1
  %9 = load i8*, i8** %3, align 8
  %10 = call i32 @inet_addr(i8* %9)
  store i32 %10, i32* %2, align 4
  br label %26

11:                                               ; preds = %1
  %12 = load i8*, i8** %3, align 8
  %13 = call %struct.hostent* @gethostbyname(i8* %12)
  store %struct.hostent* %13, %struct.hostent** %4, align 8
  %14 = icmp eq %struct.hostent* %13, null
  br i1 %14, label %15, label %18

15:                                               ; preds = %11
  %16 = call i32 @perror(i8* getelementptr inbounds ([61 x i8], [61 x i8]* @.str, i64 0, i64 0))
  %17 = call i32 @exit(i32 -1) #3
  unreachable

18:                                               ; preds = %11
  %19 = load %struct.hostent*, %struct.hostent** %4, align 8
  %20 = getelementptr inbounds %struct.hostent, %struct.hostent* %19, i32 0, i32 0
  %21 = load i64, i64* %20, align 8
  %22 = inttoptr i64 %21 to %struct.in_addr*
  %23 = getelementptr inbounds %struct.in_addr, %struct.in_addr* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = call i32 @inet_ntoa(i32 %24)
  store i32 %25, i32* %2, align 4
  br label %26

26:                                               ; preds = %18, %8
  %27 = load i32, i32* %2, align 4
  ret i32 %27
}

declare dso_local i64 @ISIP(i8*) #1

declare dso_local i32 @inet_addr(i8*) #1

declare dso_local %struct.hostent* @gethostbyname(i8*) #1

declare dso_local i32 @perror(i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i32 @inet_ntoa(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
